# trading-bot-research

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  INSTALL.md  Makefile  PROJECT_HANDOFF.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  SAFETY.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
config/: default.yaml  mt5_demo_execution.yaml  mt5_readonly.yaml  mt5_transformation.yaml  stage_d_portfolio_paper.yaml  stage_e_portfolio_paper.yaml
docs/: NYM15SR_optimization_session_2026-06-10.md  architecture.md  artifact_registry.md  assistant_collaboration.md  backtesting.md  before_trial_observation_todo.md  broker_time_verification.md  campaigns.md  ci.md  command_reference.md  config_profiles.md  data_ingestion.md  decision_log.md  development_environment.md  ea_audit_package.md  ea_log_parser.md  ea_settings_generator.md  ea_settings_reference.md  ea_user_manual.md  end_to_end_smoke.md  experiments.md  failure_injection.md  fast_strategy_iteration.md  feature_matrix.md  final_audit_agent_brief.md  final_non_live_checklist.md  human_review_package.md  incident_replay.md  known_limitations.md  manual_backtest_result_template.md  metaeditor_compile_workflow.md  mql5_ea_architecture.md  mql5_source_scanning.md  mt5_architecture.md  mt5_current_state_freeze.md  mt5_data_ingestion.md  mt5_ea_installation.md  mt5_execution_gates.md  mt5_final_audit_checklist.md  mt5_final_audit_package.md  (+37 more)
scripts/: __init__.py  build_release_candidate.py  check_all.py  check_dev_environment.py  check_metaeditor.py  check_safety.py  install_check.py  (+22 more)
(+296 files in other folders)
